--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -57,7 +57,7 @@
     form *{
       font-family: 'Poppins',sans-serif;
       color: #ffffff;
-      letter-spacing: 0.5px;
+      letter-spacing: 1px;
       outline: none;
       border: none;
     }
@@ -179,13 +179,13 @@
     <h3>Login Here</h3>
 
     <label for="username">Username</label>
-    <input type="text" placeholder="Email or Username" id="username" th:field="*{username}" name="username" required/>
+    <input type="text" placeholder="Username" id="username" th:field="*{username}" name="username" maxlength="15" th:maxlength="15" required/>
 
     <label for="password">Password</label>
-    <input type="password" placeholder="Password" id="password" th:field="*{password}" name="password" required/>
+    <input type="password" placeholder="Password" id="password" th:field="*{password}" name="password" maxlength="25" th:maxlength="25" required/>
 
     <div style=" margin-top: 25px; display: flex; align-items: center; justify-content: center; ">
-      <button id="login_button">Log In</button>
+      <button type="submit" id="login_button">Log In</button>
     </div>
     <a class="other_action" th:href="@{/users/register}"><span>Register</span></a>
 
@@ -198,10 +198,10 @@
     <h3 style=" margin-top: -5px; ">Register Here</h3>
 
     <label for="register_username">Username</label>
-    <input type="text" placeholder="Username" id="register_username" th:field="*{username}" name="username" required/>
+    <input type="text" placeholder="Username" id="register_username" th:field="*{username}" name="username" maxlength="15" th:maxlength="15" required/>
 
     <label for="register_password">Password</label>
-    <input type="password" placeholder="Password" id="register_password" th:field="*{password}" name="password" required/>
+    <input type="password" placeholder="Password" id="register_password" th:field="*{password}" name="password" minlength="6" maxlength="25" th:maxlength="25" required/>
 
     <label for="register_email">Email</label>
     <input type="email" placeholder="Email" id="register_email" th:field="*{email}" name="email" required/>
@@ -214,7 +214,7 @@
     </div>
 
     <div style=" margin-top: 55px; display: flex; align-items: center; justify-content: center; ">
-      <button id="register_button">Register</button>
+      <button type="submit" id="register_button">Register</button>
     </div>
 
     <a class="other_action" th:href="@{/users/login}"><span>Log In</span></a>
