--- a/src/main/resources/templates/profile_view.html
+++ b/src/main/resources/templates/profile_view.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>View Profile</title>
@@ -55,7 +56,7 @@
       box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.25),
       0 1px #222222;
     }
-    #progress-bar {
+    .progress-bar {
       height: 18px;
       border-radius: 5px;
       background-image: linear-gradient(
@@ -66,9 +67,16 @@
       transition: 0.4s linear;
       transition-property: width, background-color;
     }
-    .progress-moved #progress-bar {
+    .progress-moved .progress-bar {
       width: 0%;
       background-color: #ff4500;
+    }
+
+    #progress-bar4 {
+      width: 50%;
+    }
+    #progress-bar2 {
+      width: 50%;
     }
 
     .horizontal_line {
@@ -77,36 +85,21 @@
   </style>
 </head>
 <body>
-<div id="navbar-top">
-  <div style=" font-size: 25px; ">
-    <div style=" padding-top: 25px; margin-left: 10px; ">
-      <a class="icon" href="https://github.com/"><ion-icon name="logo-github"></ion-icon></a>
-      <a class="icon" href="https://www.facebook.com/"><ion-icon name="logo-facebook"></ion-icon></a>
-      <a class="icon" href="https://www.instagram.com/"><ion-icon name="logo-instagram"></ion-icon></a>
-      <a class="icon" href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a>
-    </div>
-  </div>
-  <div style=" text-align: center; margin-top: -75px; "><a th:href="@{/index}" href="index.html" style=" text-decoration: none; cursor: pointer; "><h2 style=" font-size: 40px; ">CodeTask</h2></a></div>
-  <div style=" text-align: right;  margin-top: -65px; margin-right: 18px">
-        <span style=" font-size: 21px;">
-            <a th:href="@{/users/login}" href="index.html" style=" text-decoration: underline; ">LogIn</a>
-            /
-            <a th:href="@{/users/register}" href="index.html" style=" text-decoration: underline; ">SignUp</a>
-        </span>
-  </div>
-</div>
+<div id="navbar-top" th:replace="~{fragments :: navbar_top(${logedInUsername}, ${logedInUserID})}"></div>
 
 <div style=" color: #FFFFFF; margin-top: 25px;" th:object="${user}" >
   <table class="profile_table">
     <tr>
 
-      <td style=" width: 30%; text-align: center; vertical-align: bottom; ">
+      <td style=" width: 30%; text-align: center; vertical-align: top; ">
         <div id="user_preview">
           <!-- replace with profile image -->
-          <span style="height: 11rem; width: 11rem; background-color: #bbb; border-radius: 50%; display: inline-block;"></span>
+          <span style=" margin-top: 50px; height: 11rem; width: 11rem; background-color: #bbb; border-radius: 50%; display: inline-block;"></span>
           <!-- replace with profile image -->
 
-          <h5 th:text="${user.getUsername()}" style=" margin-top: 5px; font-size: 20px; ">thisIsAUsername</h5>
+          <div></div>
+          <h5 th:text="${user.getUsername()}" style=" display: inline-block; margin-top: 5px; font-size: 20px; ">thisIsAUsername</h5>
+          <span style=" display: inline-block; margin-left: 5px; font-size: 23px;" th:if="${user.getUsername()} == ${logedInUsername}"><a th:href="@{/index}"><ion-icon name="create-outline"></ion-icon></a></span>
         </div>
       </td>
 
@@ -127,7 +120,7 @@
                     </div>
                     <p th:text="${task.getDescription()}" >Description</p><br>
                     <div style=" margin-top: 15px;">
-                      <span th:text="'Creator: ' + ${task.getCreator()?.getName()}">Creator: a</span>
+                      <span th:text="'Creator: ' + ${task.getCreator()?.getUsername()}">Creator: a</span>
                       <div style=" display: flex; justify-content: right; margin-top: -17px; margin-right: 10px; ">
                         <span th:text="'Category: ' + ${task.getCategory()?.getName()}" style="margin-left: 50px;">Category: b</span>
                         <span th:text="'Subcategory: ' + ${task.getSubcategory()?.getName()}" style="margin-left: 25px;">Subcategory: c</span>
@@ -160,13 +153,43 @@
           <span class="fa fa-star"></span>
           <span class="fa fa-star"></span>&nbsp&nbsp
           <span>3</span>
-          <div class="container">
-            <div class="progress progress-moved">
-              <div id="progress-bar" >
-              </div>
+
+          <div>
+            <div class="container">
+              <div class="progress progress-moved"><div id="progress-bar5" class="progress-bar"></div></div>
             </div>
+            <div style=" margin: -35px 0px 0px -12rem; "><span class="fa fa-star">&nbsp;5</span></div>
           </div>
-        </div>
+
+          <div>
+            <div class="container">
+              <div class="progress progress-moved"><div id="progress-bar4" class="progress-bar"></div></div>
+            </div>
+            <div style=" margin: -35px 0px 0px -12rem; "><span class="fa fa-star">&nbsp;4</span></div>
+          </div>
+
+          <div>
+            <div class="container">
+              <div class="progress progress-moved"><div id="progress-bar3" class="progress-bar"></div></div>
+            </div>
+            <div style=" margin: -35px 0px 0px -12rem; "><span class="fa fa-star">&nbsp;3</span></div>
+          </div>
+
+          <div>
+            <div class="container">
+              <div class="progress progress-moved"><div id="progress-bar2" class="progress-bar"></div></div>
+            </div>
+            <div style=" margin: -35px 0px 0px -12rem; "><span class="fa fa-star">&nbsp;2</span></div>
+          </div>
+
+          <div>
+            <div class="container">
+              <div class="progress progress-moved"><div id="progress-bar1" class="progress-bar"></div></div>
+            </div>
+            <div style=" margin: -35px 0px 0px -12rem; "><span class="fa fa-star">&nbsp;1</span></div>
+          </div>
+
+          </div>
       </td>
 
       <td style=" padding-right: 25px;">
@@ -220,53 +243,19 @@
   </table>
 </div>
 
-<div id="contact_us">
-  <table style=" width: 70%; margin-left: auto; margin-right: auto; ">
-    <tr>
-      <td class="contact_td">
-        <h5 style=" font-size: 40px; margin-bottom: 10px; margin-top: 5px; ">Contact us</h5>
-        <span style=" font-size: 20px; ">Complete the form to get in touch with us. We are here to assist you with any questions or inquiries you may have about our marketplace for freelance services.</span>
-      </td>
-      <td class="contact_td" style=" padding-left: 50px; padding-top: 25px ">
-        <form>
-          <table style=" display: block; ">
-            <tr>
-              <td class="contact_td"><label>Name</label><br><input class="input" type="text"/></td>
-              <td class="contact_td"><label style=" margin-left: 10px; ">E-mail</label><br><input class="input" type="email" style=" margin-left: 10px; "/></td>
-            </tr>
-          </table>
-          <div style=" margin-top: 10px; text-align: left ">
-            <label>Message</label><br><textarea class="input" type="text" cols="40" rows="5" style=" margin-left: 0px; width: 90%; height: 80px; "></textarea>
-          </div>
-          <div style=" text-align: right; padding-right: 25px; padding-top: 5px; ">
-            <button id="contact_button" type="submit">Sent</button>
-          </div>
-        </form>
-      </td>
-    </tr>
-  </table>
-</div>
+<div id="contact_us" th:replace="~{fragments :: contact_us}"></div>
 
-<footer id="footer">
-  <div style=" font-size: 30px; margin-top: 10px ">CodeTask</div>
-  <div style=" font-size: 20px; padding-top: 10px; ">
-    <a class="icon" href="https://github.com/"><ion-icon name="logo-github"></ion-icon></a>
-    <a class="icon" href="https://www.facebook.com/"><ion-icon name="logo-facebook"></ion-icon></a>
-    <a class="icon" href="https://www.instagram.com/"><ion-icon name="logo-instagram"></ion-icon></a>
-    <a class="icon" href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a>
-  </div>
-  <div style=" padding-top: 20px; "><a href="https://www.cs.unipi.gr/index.php?lang=el">University of Piraeus 2023 ®</a></div>
-</footer>
+<footer id="footer" th:replace="~{fragments :: footer}"></footer>
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 <script>
   var i = 0;
-  function moveProgressBar(fillAmount) {
+  function moveProgressBar(fillAmount, elementName) {
     if (i == 0) {
       i = 1;
-      var elem = document.getElementById("progress-bar");
+      var elem = document.getElementById(elementName);
       var width = 1;
       var id = setInterval(frame, 10);
       function frame() {
