--- a/src/main/resources/templates/task_view.html
+++ b/src/main/resources/templates/task_view.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity6">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <title>View Task</title>
@@ -20,7 +21,7 @@
       content: '';
       height: 100%;
       float: left;
-      margin-bottom: 600px;
+      margin-bottom: 700px;
     }
 
     .content
@@ -53,7 +54,9 @@
       margin-left: 20px;
       border-radius: 8px;
       width: 40%;
-      background-color: rgb(255, 69, 0);
+      background-color: rgba(255,255,255,0.05);
+      border: 2px solid rgba(255,255,255,0.1);
+      box-shadow: 0 0 40px rgba(8,7,16,0.6);
       float: right;
     }
 
@@ -110,6 +113,13 @@
       box-shadow: rgba(80, 63, 205, 0.5) 0 1px 30px;
       transition-duration: .1s;
     }
+    #delete_offers_button {
+      background-image: linear-gradient(92.88deg, #ff5914 9.16%, #ff4000 43.89%, #ff4500 64.72%);
+    }
+    #delete_offers_button:hover {
+      box-shadow: rgba(255, 53, 0, 0.5) 0 1px 30px;
+      transition-duration: .1s;
+    }
 
     @media (min-width: 768px) {
       .bid_button {
@@ -119,32 +129,15 @@
   </style>
 </head>
 <body>
-<div id="navbar-top">
-  <div style=" font-size: 25px; ">
-    <div style=" padding-top: 25px; margin-left: 10px; ">
-      <a class="icon" href="https://github.com/"><ion-icon name="logo-github"></ion-icon></a>
-      <a class="icon" href="https://www.facebook.com/"><ion-icon name="logo-facebook"></ion-icon></a>
-      <a class="icon" href="https://www.instagram.com/"><ion-icon name="logo-instagram"></ion-icon></a>
-      <a class="icon" href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a>
-    </div>
-  </div>
-  <div style=" text-align: center; margin-top: -75px; "><a th:href="@{/index}" href="index.html" style=" text-decoration: none; cursor: pointer; "><h2 style=" font-size: 40px; ">CodeTask</h2></a></div>
-  <div style=" text-align: right;  margin-top: -65px; margin-right: 18px">
-        <span style=" font-size: 21px;">
-            <a th:href="@{/users/login}" href="index.html" style=" text-decoration: underline; ">LogIn</a>
-            /
-            <a th:href="@{/users/register}" href="index.html" style=" text-decoration: underline; ">SignUp</a>
-        </span>
-  </div>
-</div>
+<div id="navbar-top" th:replace="~{fragments :: navbar_top(${logedInUsername}, ${logedInUserID})}"></div>
 
 <div class="container" style=" margin-top: 25px; ">
-  <a th:href="@{/tasks}" href="task_search.html" style=" text-decoration: underline; position: absolute; left: 0; margin-left: 15px; ">< Back</a>
+  <!--<a th:href="@{/tasks}" href="task_search.html" style=" text-decoration: underline; position: absolute; left: 0; margin-left: 15px; ">< Back</a>-->
 </div>
 
 <div class="content" style=" color: #FFFFFF; text-align: center; " th:object="${task}">
   <div class="wrapper">
-    <div class="rightContent" style=" font-size: 17px; padding-top: 20px; ">
+    <div class="rightContent" style=" font-size: 17px; padding-top: 10px; text-align: center; ">
       <label class="bid_label" for="end_date">End Date</label><br>
       <p id="end_date" th:text="${task.getEndDate()}" >time</p>
       <br>
@@ -154,15 +147,29 @@
       <label class="bid_label" for="max_price">Max bidding price</label><br>
       <p id="max_price" th:text="${task.getMaxPrice()} + ' €'" >500 €</p>
       <br>
-      <label class="bid_label" for="current_price">Active bid</label><br>
-      <p id="current_price" th:text="${task.getCurrentPrice()} + ' €'">400 €</p>
+      <label class="bid_label" for="current_price">Active lowest offer</label><br>
+      <p id="current_price" th:text="${task.getActiveLowestPrice()} + ' €'">400 €</p>
       <br>
-      <input id="bid_input" type="number" name="maxPrice" th:max="${task.getMaxPrice()}" min="0" th:value="${task.getMaxPrice()}" /><br>
-      <button class="bid_button" type="button">Bid</button>
+      <form id="bid_form" action="#" th:action="@{/bid}" method="post" sec:authorize="hasAuthority('developer')">
+        <input id="bid_input" type="number" name="offer" th:max="${task.getMaxPrice()}" min="1" th:value="${task.getMaxPrice()}" /><br>
+        <input type="number" name="currentTask" th:value="${taskId}" hidden/>
+        <div th:if="${myActiveOffer == null}">
+          <button class="bid_button" type="submit">Make Offer</button>
+          <p style=" margin-top: 25px; ">you have not made an offer yet</p>
+        </div>
+        <div th:if="${myActiveOffer != null}">
+          <button class="bid_button" type="submit" style=" font-size: 15px; display: inline-block ">Make new offer</button>
+          <a th:href="@{/delete_offers/{id}(id=${taskId})}"><button id="delete_offers_button" class="bid_button" type="button" style=" font-size: 15px;">Delete offers</button></a>
+          <p style=" margin-top: 25px; "  th:text="'Your offer: ' + ${myActiveOffer} + '€'">Your offer: 0€</p>
+        </div>
+      </form>
+      <br>
+      <br>
+
+      <p sec:authorize="!hasAuthority('developer')">You cannot bid because you are not a developer</p>
     </div>
     <div class="leftContent" style=" font-size: 20px; text-align: left; margin-left: 15px; ">
       <h3 style=" font-size: 25px; " th:text="${task.getTitle()}">Title</h3>
-
 
 
 
@@ -172,8 +179,7 @@
 
 
 
-
-      <h5 th:text="${task.getCreator().getUsername()}" style=" margin: -45px 0px 50px 85px; ">thisIsAUsername</h5>
+      <a th:href="@{/users/profile_view/{id}(id=${task.getCreator()?.getId()})}" href="#"><h5 th:text="${task.getCreator()?.getUsername()}" style=" margin: -45px 0px 50px 85px; ">thisIsAUsername</h5></a>
       <h4>About this task</h4>
       <p style=" text-align: justify; " th:text="${task.getDescription()}">Description</p>
       <p th:text="'category: ' + ${task.getCategory().getName()}">category: app</p>
@@ -182,43 +188,22 @@
   </div>
 </div>
 
-<div id="contact_us">
-  <table style=" width: 70%; margin-left: auto; margin-right: auto; ">
-    <tr>
-      <td class="contact_td">
-        <h5 style=" font-size: 40px; margin-bottom: 10px; margin-top: 5px; ">Contact us</h5>
-        <span style=" font-size: 20px; ">Complete the form to get in touch with us. We are here to assist you with any questions or inquiries you may have about our marketplace for freelance services.</span>
-      </td>
-      <td class="contact_td" style=" padding-left: 50px; padding-top: 25px ">
-        <form>
-          <table style=" display: block; ">
-            <tr>
-              <td class="contact_td"><label>Name</label><br><input class="input" type="text"/></td>
-              <td class="contact_td"><label style=" margin-left: 10px; ">E-mail</label><br><input class="input" type="email" style=" margin-left: 10px; "/></td>
-            </tr>
-          </table>
-          <div style=" margin-top: 10px; text-align: left ">
-            <label>Message</label><br><textarea class="input" type="text" cols="40" rows="5" style=" margin-left: 0px; width: 90%; height: 80px; "></textarea>
-          </div>
-          <div style=" text-align: right; padding-right: 25px; padding-top: 5px; ">
-            <button id="contact_button" type="submit">Sent</button>
-          </div>
-        </form>
-      </td>
-    </tr>
-  </table>
+<div style=" margin-top: 50px; ">
+  <hr class="horizontal_line">
+
+  <div style=" margin: 25px 20px 0px 20px; font-size: 20px; color: #ffffff" th:each="offer: ${offers}">
+    <!-- replace with profile image -->
+    <span style=" display: inline-block; height: 65px; width: 65px; background-color: #bbb; border-radius: 50%; "></span>
+    <!-- replace with profile image -->
+    <p style=" margin: -60px 0px 50px 80px; " th:text="${offer.getBidder()?.getUsername()}">thisIsAnotherUsername</p>
+    <p style=" margin: -45px 0px 50px 80px; " th:text="'Offer: ' + ${offer.getPrice()} + ' €'">Offer: 300 €</p>
+    <hr class="horizontal_line">
+  </div>
 </div>
 
-<footer id="footer">
-  <div style=" font-size: 30px; margin-top: 10px ">CodeTask</div>
-  <div style=" font-size: 20px; padding-top: 10px; ">
-    <a class="icon" href="https://github.com/"><ion-icon name="logo-github"></ion-icon></a>
-    <a class="icon" href="https://www.facebook.com/"><ion-icon name="logo-facebook"></ion-icon></a>
-    <a class="icon" href="https://www.instagram.com/"><ion-icon name="logo-instagram"></ion-icon></a>
-    <a class="icon" href="https://twitter.com/"><ion-icon name="logo-twitter"></ion-icon></a>
-  </div>
-  <div style=" padding-top: 20px; "><a href="https://www.cs.unipi.gr/index.php?lang=el">University of Piraeus 2023 ®</a></div>
-</footer>
+<div id="contact_us" th:replace="~{fragments :: contact_us}"></div>
+
+<footer id="footer" th:replace="~{fragments :: footer}"></footer>
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
