--- a/src/main/resources/static/css/application.css
+++ b/src/main/resources/static/css/application.css
@@ -82,6 +82,7 @@ input, textarea {
     width: 100%;
     margin-left: -40px;
     text-align: center;
+    z-index: 9998;
 }
 
 .drop_nav {
@@ -100,6 +101,7 @@ input, textarea {
     -ms-user-select: none; /* Internet Explorer/Edge */
     user-select: none; /* Non-prefixed version, currently supported by Chrome, Edge, Opera and Firefox */
     /* select text disabled */
+    z-index: 9997;
 }
 
 .drop_span {
@@ -112,6 +114,7 @@ input, textarea {
     font-size : 1em;
     cursor : pointer;
     text-align: center;
+    z-index: 9999;
 }
 
 .slide {
@@ -124,11 +127,13 @@ input, textarea {
     text-align: center;
     transition: height .3s ease;
     list-style-type: none;
+    z-index: 9998;
 }
 
 .slide li {
     padding-top: 40px;
     font-size: 18px;
+    z-index: 9998;
 }
 
 #touch {
