--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -102,7 +102,7 @@
         <tr valign="top">
             <td class="banner_td">
                 <h7 style=" font-size: 15px ">Find vetted professionals for all your coding needs at CodeTask<br><br>
-                    <button class="hire_now" onclick="hireNow()" type="button">Hire Now!</button>
+                    <button class="hire_now" onclick="hireNow()" type="button">View Tasks!</button>
                     <button id="create_task" class="hire_now" onclick="createTask()" type="button" style=" margin-left: 10px; background-image: linear-gradient(92.88deg, #ff5914 9.16%, #ff3500 43.89%, #ff4500 64.72%); " sec:authorize="hasAnyAuthority('client', 'admin')">Create Task</button>
                 </h7>
             </td>
