--- a/src/main/resources/templates/task_create.html
+++ b/src/main/resources/templates/task_create.html
@@ -129,7 +129,7 @@
         <label class="creation_label">Title</label><br>
         <input class="creation_input" type="text" name="title" required/><br>
         <label class="creation_label">Description</label><br>
-        <textarea class="creation_textarea" type="text" name="description" cols="40" rows="5" required></textarea>
+        <textarea class="creation_textarea" type="text" name="description" cols="40" rows="5" maxlength="2000" required></textarea>
         <div style=" margin-top: 5px; ">
             <label class="creation_label">Public</label>
             <input class="creation_checkbox" name="isPublic" type="checkbox" />
